--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
     />
-    <title>Acme Corporation</title>
+    <title>Acme Co</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -264,7 +264,7 @@
         </div>
         <div class="footer">
           <p>© 2020 ACME Co. All rights reserved.</p>
-          <p>Hand Made by ARUSHI.AI</p>
+          <p>Hand Made by Deepa Khatri</p>
         </div>
       </div>
     </div>
